@startuml
title Activity

interface RequestHandler {
    handleRequest(I, Context)
}
class AddSongToPlaylistActivity {
    -log: Logger
    -playlistDao: PlaylistDao
    -albumTrackDao: AlbumTrackDao
    +handleRequest(AddSongToPlaylistRequest, Context): AddSongToPlaylistResult
}

class CreatePlaylistActivity {
    -log: Logger
    -playlistDao: PlaylistDao
    +handleRequest(CreatePlaylistRequest, Context): CreatePlaylistResult
}

class GetPlaylistActivity {
    -log: Logger
    -playlistDao: PlaylistDao
    +handleRequest(GetPlaylistRequest, Context): GetPlaylistResult
}

class GetPlaylistSongsActivity {
    -log: Logger
    -playlistDao: PlaylistDao
    +handleRequest(GetPlaylistSongsRequest, Context): GetPlaylistSongsResult
}

class UpdatePlaylistActivity {
    -log: Logger
    -playlistDao: PlaylistDao
    +handleRequest(UpdatePlaylistRequest, Context): UpdatePlaylistResult
}

UpdatePlaylistActivity --|> RequestHandler
GetPlaylistActivity --|> RequestHandler
GetPlaylistSongsActivity --|> RequestHandler
CreatePlaylistActivity --|> RequestHandler
AddSongToPlaylistActivity --|> RequestHandler

newpage

class AlbumTrackDao {
    -dynamoDbMapper: DynamoDBMapper
}

class PlaylistDao {
    -dynamoDbMapper: DynamoDBMapper
    +getPlaylist(String): Playlist
}

newpage

class AlbumTrackNotFoundException

class InvalidAttributeException

class InvalidAttributeValueException

class InvalidAttributeChangeException

class PlaylistNotFoundException

InvalidAttributeException <|-- InvalidAttributeChangeException
InvalidAttributeException <|-- InvalidAttributeValueException

newpage

class AlbumTrack {
    - @DynamoDBHashKey asin:String
    - @DynamoDBRangeKey trackNumber: Integer
    -albumName: String
    -songTitle: String

}

class Playlist {
    - @DynamoDBHashKey id:String
    -songCount: Integer
    -name: String
    -customerId: String
    -tags: Set<String>
    -songList: List<AlbumTrack>
    +getId(): String
    +setId():
    +getSongList(): List<AlbumTrack>
    +setSongList()
}

AlbumTrack --o Playlist
AddSongToPlaylistActivity o-- AlbumTrackDao
CreatePlaylistActivity o-- PlaylistDao
AddSongToPlaylistActivity o-- PlaylistDao
GetPlaylistActivity o-- PlaylistDao
GetPlaylistSongsActivity o-- PlaylistDao
UpdatePlaylistActivity o-- PlaylistDao


@enduml